# furnace

./: Cargo.toml
furnace-cli/: .furnace.yml  .gitignore  Cargo.toml  furnace-debug.sh
furnace-cli/assets/: repository.yml
furnace-cli/assets/nginx/: nginx.conf
furnace-cli/assets/php-fpm-template/: php-fpm.conf.tpl
furnace-cli/src/: apache_util.rs  cli.rs  config.rs  main.rs  nginx_util.rs  php.rs  platform.rs  recipe.rs  services.rs
furnace-core/: Cargo.toml
furnace-core/src/: lib.rs  php.rs  recipe.rs  services.rs  web_service.rs
furnace-ui/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
furnace-ui/src/: App.tsx  main.tsx
furnace-ui/src-tauri/: Cargo.toml  tauri.conf.json
furnace-ui/src-tauri/src/: lib.rs  main.rs
furnace-ui/src/components/: FurnaceTemplate.tsx  RecipeList.tsx
furnace-ui/src/pages/: Welcome.tsx
