[package]
name = "furnace"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "A cross-platform local development environment manager"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
os_info = "3.7"
which = "5.0"
chrono = "0.4"
dirs = "5.0"
prettytable = { version = "0.10", features = ["csv"] }
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
indicatif = "0.17.11"
whoami = "1.6.0"
furnace-core = { path = "../furnace-core" }
