[package]
name = "furnace-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
prettytable = { version = "0.10", features = ["csv"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
indicatif = "0.17.11"
whoami = "1.6.0"
